Fix #2 Add text align center for css

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,7 @@
  *= require scrivito
  *= require scrivito_section_widgets
  */
+body {
+    text-align: center
+}
+
